[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tgnn-rrm"
version = "0.1.0"
description = "Reimplementation of event-based temporal graph neural networks for radio resource management."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Maher Marwani" }
]
dependencies = [
  "torch"
]

[tool.setuptools.packages.find]
where = ["src"]
